compiler/tests/should-pass/code-generation/commitment/CommitmentToReplication1.via
host alice
host bob
assume alice trusts bob
assume bob trusts alice

fun main() {
    let $aliceLocal@Local(host = alice) = input int from alice;
    let $aliceCommit@Commitment(receivers = {bob}, sender = alice) = $aliceLocal;
    let $aliceBobDeclassified@Replication(hosts = {alice, bob}) = $aliceCommit;
}
