compiler/tests/should-fail/HostSetClash.via
/* NameClashError */

host alice : {A}

fun main() {
    val x: int@Local(host = {alice, alice}) = 0;
}
